# D-Hammer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  PROMPT-FIND.md  PROMPT-GEN-LATEX.md  PROMPT-GEN.md  README.md  main.cpp  test_code.txt
coq/: rewrite.v
cpp/: CMakeLists.txt  main.cpp  toplevel.cpp
cpp/src/: CMakeLists.txt
cpp/src/WSTPinterface/: CMakeLists.txt  WSTPinterface.cpp  WSTPinterface.hpp  test_WSTPinterface.cpp
cpp/src/astparser/: AST.g4  CMakeLists.txt  astparser.cpp  astparser.hpp  test_astparser.cpp
cpp/src/dhammer/: CMakeLists.txt  DHAMMER.g4  calculus.cpp  calculus.hpp  dhammer.hpp  dhammer_parser.cpp  dhammer_parser.hpp  prover.cpp  prover.hpp  reduction.cpp  reduction.hpp  symbols.cpp  symbols.hpp  syntax_theory.cpp  syntax_theory.hpp  trace.cpp  trace.hpp
cpp/src/dhammer_tests/: CMakeLists.txt  test_calculus.cpp  test_parser.cpp  test_prover.cpp  test_reduction.cpp  test_special_eq.cpp  test_syntax_theory.cpp
cpp/src/dirace/: CMakeLists.txt  DIRACE.g4  calculus.cpp  calculus.hpp  dirace.hpp  dirace_parser.cpp  dirace_parser.hpp  label_elim.cpp  label_elim.hpp  prover.cpp  prover.hpp  reduction.cpp  reduction.hpp  symbols.cpp  symbols.hpp  syntax_theory.cpp  syntax_theory.hpp  trace.cpp  trace.hpp
cpp/src/dirace_tests/: CMakeLists.txt  test_calculus.cpp  test_parser.cpp  test_prover.cpp  test_reduction.cpp  test_special_eq.cpp  test_syntax_theory.cpp
cpp/src/diracoq/: CMakeLists.txt  DIRACOQ.g4  calculus.cpp  calculus.hpp  deBruijn.cpp  deBruijn.hpp  diracoq.hpp  diracoq_parser.cpp  diracoq_parser.hpp  label_elim.cpp  label_elim.hpp  prover.cpp  prover.hpp  reduction.cpp  reduction.hpp  reserved.cpp  reserved.hpp  symbols.cpp  symbols.hpp  syntax_theory.cpp  syntax_theory.hpp  trace.cpp  trace.hpp  trace2coq.cpp  trace2coq.hpp
cpp/src/diracoq_tests/: CMakeLists.txt  test_calculus.cpp  test_deBruijn.cpp  test_parser.cpp  test_prover.cpp  test_reduction.cpp  test_special_eq.cpp  test_syntax_theory.cpp  test_trace2coq.cpp
cpp/src/examples/: CMakeLists.txt  examples.cpp  examples.hpp  test_coqq.cpp  test_examples.cpp  test_timing.cpp
cpp/src/scalar/: CMakeLists.txt  scalar.cpp  scalar.hpp  test_scalar.cpp
cpp/src/scalar_vec/: CMakeLists.txt  scalar_vec.cpp  scalar_vec.hpp  test_scalar_vec.cpp
cpp/src/ualg/: AC_by_vec.cpp  AC_by_vec.hpp  CMakeLists.txt  rewrite.hpp  term.hpp  termbank.hpp  ualg.hpp  ualgparser.cpp  ualgparser.hpp
cpp/src/ualg_tests/: CMakeLists.txt  test_AC_by_vec.cpp  test_ualg_parsing.cpp  test_ualg_rewrite.cpp  test_ualg_term.cpp
src/: CMakeLists.txt
src/astparser/: AST.g4  astparser.cpp  test_astparser.cpp
src/diracoq/: CMakeLists.txt  DIRACOQ.g4  calculus.cpp  calculus.hpp  diracoq.hpp
src/diracoq_tests/: test_calculus.cpp
src/scalar/: scalar.cpp  scalar.hpp  test_scalar.cpp
src/scalar_vec/: scalar_vec.cpp  scalar_vec.hpp  test_scalar_vec.cpp
src/ualg/: AC_by_vec.cpp  AC_by_vec.hpp  CMakeLists.txt  UALG.g4  rewrite.cpp  rewrite.hpp  term.cpp  term.hpp  termbank.cpp  termbank.hpp  ualg.hpp  ualgparser.cpp  ualgparser.hpp
src/ualg_tests/: CMakeLists.txt  test_AC_by_vec.cpp  test_ualg_parser.cpp  test_ualg_parsing.cpp  test_ualg_rewrite.cpp  test_ualg_term.cpp
